<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.preben.portscanbuddy.ScanHostIntent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtHostName"/>

    <EditText
        android:inputType="textUri"
        android:maxLines="1"
        android:id="@+id/txtHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtTypeOfScan"/>

    <Spinner
        android:id="@+id/spinnerTypeScan"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtSocketTimeout"/>

    <Spinner
        android:id="@+id/spinnerSocketTimeout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/btnScanHost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnScanHost"/>

    <TextView
        android:id="@+id/txtOpenPorts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>
